Admin Authentication System

--- a/format.html
+++ b/format.html
@@ -1,9 +1,10 @@
 {% extends "Layout.html" %}
 {% load static %}
 
-<!-- titile -->
+{%block title%}Inventory | Amar Shop{%endblock title%}
+
 {%block link%}
-    <title>Inventory | Amar Shop</title>
+    <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
 {%endblock link%}
 
 
